--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,6 @@
 <h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
+<p>Hollo</p>
+<%# add %>
+<i class="fas fa-air-freshener"></i>
+<i class="fas fa-adjust"></i>
+<i class="fas fa-archway"></i>
