login and css add

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,6 +1,42 @@
-<h1>Home#top</h1>
-<p>Hollo</p>
+<head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+<div class="jumbotron bg-image">
+  
+ 
+  <link href="/assets/cover.css" rel="stylesheet">
+  <div class="container">
+  
+  
+  <h1>Skill Hub</h1>
+  <%# <p><a class="btn btn-primary btn-lg" href="//bootstrapcreative.com/" role="button">Start Skill</a></p> %>
+<%=link_to("/login") do %>
+    <button class="btn btn-primary rounded-pill mx-2" >Login</button>
+  <%end%>
+  <%=link_to("/signup") do %>
+    <button class="btn btn-outline-primary rounded-pill mx-2" >Signup</button>
+  <%end%>
+    </div>
+<!--   /container  -->
+</div>
+<section>
+<div class="container">
+    <div class="row">
+        <div class="col">1</div>
+        <div class="col">2</div>
+        <div class="col">3</div>
+    </div>
+</div>
+</section>
+
+
+
+  
+  
+  
+
+
 <%# add %>
-<i class="fas fa-air-freshener"></i>
+<%# <i class="fas fa-air-freshener"></i>
 <i class="fas fa-adjust"></i>
-<i class="fas fa-archway"></i>
+<i class="fas fa-archway"></i> %>
