--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>SkillUp</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>SkillUp</title>
+  <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+      
+      <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container"> <a class="navbar-brand" href="/">
+        <span class="text-primary">A</span>vant
+    </a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarLight" aria-controls="navbarLight" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarLight">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown mx-2"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                About
+                </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Design</a> <a class="dropdown-item" href="#">Programming</a> <a class="dropdown-item" href="#">Consulting</a> <a class="dropdown-item" href="#">Hosting</a> <a class="dropdown-item" href="#">Editing</a> </div>
+          </li>
+<%=link_to("/login") do %>
+    <button class="btn btn-primary rounded-pill mx-2" >Login</button>
+  <%end%>
+  <%=link_to("/signup") do %>
+    <button class="btn btn-outline-primary rounded-pill mx-2" >Signup</button>
+  <%end%>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
 
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
 
-  <body>
-    <%= yield %>
-  </body>
+
+
+
+
+  <!-- Image and text -->
+  <%= yield %>
+    <footer class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="#">
+    <div class="container">
+        <span class="text-primary">A</span>vant
+    </a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDark" aria-controls="navbarDark" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarDark">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">Contact</li>
+        </ul>
+      </div>
+      </div>
+    </footer>
+</body>
 </html>
